--- a/FactApp.Server/FactApp.Server.csproj
+++ b/FactApp.Server/FactApp.Server.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\FactApp.Shared\FactApp.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
